<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_move_local_multireddits"
        android:orderInCategory="4"
        android:title="@string/move_local_multireddits"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_find_subreddits"
        android:orderInCategory="3"
        android:title="@string/find_subreddits"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import_subscriptions"
        android:orderInCategory="2"
        android:title="@string/import_subscriptions"
        android:icon="@drawable/ic_import_day_night_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search_subscribed_thing_listing_activity"
        android:orderInCategory="1"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_toolbar_24dp"
        app:showAsAction="ifRoom" />
</menu>
