<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_shadowbox_mode_post_fragment"
        android:orderInCategory="99"
        android:title="@string/action_shadowbox_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tiktok_with_sound_post_fragment"
        android:orderInCategory="99"
        android:title="@string/action_tiktok_with_sound"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_lazy_mode_post_fragment"
        android:orderInCategory="100"
        android:title="@string/action_start_lazy_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter_posts_post_fragment"
        android:orderInCategory="101"
        android:title="@string/filter_posts"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_more_options_post_fragment"
        android:orderInCategory="103"
        android:title="@string/action_more_options"
        app:showAsAction="never" />
</menu>
